freebsd-glue (0.1.9) UNRELEASED; urgency=low

  * Build with full -Werror.

 -- Robert Millan <rmh@debian.org>  Tue, 08 Oct 2013 00:28:49 +0200

freebsd-glue (0.1.8) unstable; urgency=low

  * Change header protectionin <rpc/xdr.h> to avoid collision with
    glibc's.

 -- Robert Millan <rmh@debian.org>  Sun, 06 Oct 2013 15:03:15 +0200

freebsd-glue (0.1.7) unstable; urgency=low

  * Fix minor formatting error in setfstab().
  * Add <rpc/xdr.h>.

 -- Robert Millan <rmh@debian.org>  Sun, 06 Oct 2013 14:37:43 +0200

freebsd-glue (0.1.6) unstable; urgency=low

  * Define __FreeBSD_version as __FreeBSD_kernel_version when available.
  * Implement setfib, setfstab (as ENOSYS stub) and getfstab (with
    hardcoded return value).

 -- Robert Millan <rmh@debian.org>  Thu, 03 Oct 2013 01:11:03 +0200

freebsd-glue (0.1.5) unstable; urgency=low

  * Add include_next <sys/queue.h> to sys/queue.h in order to bring back
    macros that were disabled in kernel headers.

 -- Robert Millan <rmh@debian.org>  Mon, 09 Sep 2013 15:06:42 +0200

freebsd-glue (0.1.4) unstable; urgency=low

  * Implement srandomdev().
  * Implement getdiskbyname().
  * Add <timeconv.h> stubs.

 -- Robert Millan <rmh@debian.org>  Mon, 02 Sep 2013 20:48:37 +0200

freebsd-glue (0.1.3) unstable; urgency=low

  * linkaddr.c is kFreeBSD-specific.

 -- Robert Millan <rmh@debian.org>  Tue, 06 Aug 2013 18:14:14 +0200

freebsd-glue (0.1.2) unstable; urgency=low

  * Add <sys/_stdint.h> to fix buildability of <libutil.h>.

 -- Robert Millan <rmh@debian.org>  Tue, 06 Aug 2013 17:22:40 +0200

freebsd-glue (0.1.1) unstable; urgency=low

  * Put includes of <sys/kern/*.h> OUTSIDE the header protection (which
    they intentionally duplicate).
  * FreeBSD <stdio.h> and <sys/types.h> have a kludge to declare
    lseek(). Duplicate the Glibc declaration here.
  * <sys/stat.h> implicitly includes <sys/time.h>.
  * Add trimdomain, link_addr and link_ntoa.

 -- Robert Millan <rmh@debian.org>  Sun, 04 Aug 2013 18:20:40 +0200
